--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testddddb
+spring.datasource.url=jdbc:h2:mem:testddddb;MODE=Oracle;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=test
 spring.datasource.password=admin
