--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
+		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.6.RELEASE</version>
-		<relativePath/>
 	</parent>
 	<groupId>com.comunity</groupId>
 	<artifactId>ddd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
 	<name>ddd</name>
 	<description>Demo project for Spring Boot</description>
 
